# auditah

./: .gitignore  AGENTS.md  Cargo.lock.attr.toml  Cargo.toml  PKGBUILD  README.md  auditah.toml  build.rs  justfile
.plans/add-license/: plan.md
.plans/auditah/: plan.md
.plans/bom/: plan.md
.plans/license-terms-flag-removal/: plan.md
.plans/license-terms-redesign/: plan.md
.plans/lint-hardening/: plan.md
.plans/semver/: plan.md
.plans/test-conformance/: plan.md
.plans/well-known-licenses/: plan.md
scripts/: bump-version.rs
src/: add.rs  add_license.rs  audit.rs  bom.rs  cli.rs  config.rs  credits.rs  discovery.rs  export.rs  init_licenses.rs  lib.rs  license_def.rs  main.rs  manifest.toml  notices.rs  project.rs  registry.rs  services.rs  test_support.rs  well_known.rs
src/add/: mod.rs
src/audit/: cascade.rs  mod.rs  pipeline.rs  report.rs
src/cli/: ack_cmd.rs  add_cmd.rs  add_license_cmd.rs  audit_cmd.rs  bom_cmd.rs  credits_cmd.rs  export_cmd.rs  generate_cmd.rs  mod.rs  (+8 more)
tests/: ack_pipeline.rs  add_license_pipeline.rs  add_pipeline.rs  audit_cli.rs  audit_pipeline.rs  audit_pipeline_async.rs  bom_pipeline.rs  cli_output_pipeline.rs  credits_pipeline.rs  discovery_precedence.rs  discovery_root.rs  error_scenarios.rs  export_pipeline.rs  generate_pipeline.rs  init_pack_pipeline.rs  init_pipeline.rs  license_cli.rs  license_group_cli.rs  license_merge_pipeline.rs  license_pipeline.rs  licenses_dir_pipeline.rs  notices_pipeline.rs  obligation_rstest.rs  provision_pipeline.rs  sidecar_pipeline.rs
well_known_licenses/: 0BSD.toml  Apache-2.0.toml  BSD-2-Clause.toml  BSD-3-Clause.toml  CC-BY-4.0.toml  CC-BY-ND-4.0.toml  CC-BY-SA-4.0.toml  CC0-1.0.toml  GPL-3.0-only.toml  ISC.toml  LGPL-3.0-only.toml  MIT.toml  MPL-1.0.toml  MPL-1.1.toml  MPL-2.0-no-copyleft-exception.toml  MPL-2.0.toml  OFL-1.1.toml
(+17 files in other folders)
