[package]
name = "auditah"
version = "0.1.0"
edition = "2021"
description = "Obligation-aware license compliance + attribution tool for gamedev"
license = "MIT OR Apache-2.0"

[[bin]]
name = "auditah"
path = "src/main.rs"

[lib]
name = "auditah"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
error-stack = "0.8"
wherror = "2"
walkdir = "2"
globset = "0.4"
spdx = "0.10"
derive_more = { version = "1", features = ["debug"] }

[dev-dependencies]
tempfile = "3"
temptree = "0.2"
rstest = "0.22"
parking_lot = "0.12.5"
