[package]
name = "auditah"
version = "0.1.0"
edition = "2021"
description = "Obligation-aware license compliance + attribution tool for gamedev"
license = "MIT OR Apache-2.0"

[[bin]]
name = "auditah"
path = "src/main.rs"

[lib]
name = "auditah"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
error-stack = "0.8"
wherror = "2"
walkdir = "2"
globset = "0.4"
derive_more = { version = "1", features = ["debug"] }
parking_lot = { version = "0.12.5", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
temptree = "0.2"
rstest = "0.22"
auditah = { path = ".", features = ["test-helper"] }

[build-dependencies]
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[features]
test-helper = ["dep:parking_lot"]


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
